Fixed issue with box-sizing on Firefox.
Box-sizing still requires a -moz prefix. Weird.

--- a/app/assets/stylesheets/admin/images.css.scss
+++ b/app/assets/stylesheets/admin/images.css.scss
@@ -20,6 +20,7 @@
     .overlay {
       position: absolute;
       box-sizing: border-box;
+      -moz-box-sizing: border-box;
       top: 30%;
       width: 60%;
       left: 20%;
